[OptionBundle, WebBundle] Option order now able to be entered in admin area.

--- a/src/Bundle/OptionBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/OptionBundle/Resources/translations/messages.en.yml
@@ -4,6 +4,7 @@ accard:
         form:
             id: Id
             name: Name
+            order: Order
             presentation: Presentation
             values: Values
         action:
