[FieldBundle] Enabled selection of ordering of choice fields.

--- a/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/FieldBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,8 @@ accard:
             presentation: Presentation
             type: Type
             option: Option
+            order: Order
+            order_default: Default
             allow_multiple: Allow multiple options
             addable: Addable
         action:
