[CoreBundle] Globally overrode the default invalid_message on Symfony form types; number, integer to provide better messages.

--- a/src/Bundle/CoreBundle/Resources/translations/validators.en.yml
+++ b/src/Bundle/CoreBundle/Resources/translations/validators.en.yml
@@ -6,6 +6,11 @@
 # file that was distributed with this source code.
 
 accard:
+    invalid_number: This must be a valid number.
+    invalid_integer: This must be a valid integer.
+    invalid_date: This must be a valid date YYYY-MM-DD.
+    invalid_datetime: This must be a valid date and time.
+    invalid_percent: This must be a valid number to be considered a percentage.
     patient:
         diagnoses:
             type: Diagnoses must all be valid diagnoses.
