[PatientBundle] Patient forms now strictly require gender and race.

--- a/src/Bundle/PatientBundle/Resources/translations/messages.en.yml
+++ b/src/Bundle/PatientBundle/Resources/translations/messages.en.yml
@@ -18,6 +18,8 @@ accard:
             race: Race
         action:
             create: Create Patient
+            choose_gender: Choose a gender
+            choose_race: Choose a race
             manage: Manage Patients
             design: Design Patient
             update: Update Patient
